<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/input_color">

    <EditText
        android:id="@+id/showNumber"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="end"
        android:inputType="textPersonName"
        android:paddingTop="30pt"
        android:text="@string/ShowNumber"
        android:textColor="@android:color/white"
        android:textSize="70sp"
        tools:ignore="TextFields" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:onClick="clearButton"
                android:id="@+id/clear_btn"
                style="@style/GeneralButtons"
                android:text="@string/clear_btn" />

            <Button
                android:onClick="clickButtonEvent"
                android:id="@+id/sign_btn"
                style="@style/GeneralButtons"
                android:text="@string/sign_btn" />

            <Button
                android:onClick="percentageEvent"
                android:id="@+id/percent_btn"
                style="@style/GeneralButtons"
                android:text="@string/percent_btn" />

            <Button
                android:onClick="operationEvent"
                android:id="@+id/divide_btn"
                style="@style/Operation_btn"
                android:text="@string/divide_btn" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:onClick="clickButtonEvent"
                android:id="@+id/seven_btn"
                style="@style/GeneralButtons"
                android:text="@string/seven_btn" />

            <Button
                android:onClick="clickButtonEvent"
                android:id="@+id/eight_btn"
                style="@style/GeneralButtons"
                android:text="@string/eight_btn" />

            <Button
                android:onClick="clickButtonEvent"
                android:id="@+id/nine_btn"
                style="@style/GeneralButtons"
                android:text="@string/nine_btn" />

            <Button
                android:onClick="operationEvent"
                android:id="@+id/multiple_btn"
                style="@style/Operation_btn"
                android:text="@string/multiple_btn" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:onClick="clickButtonEvent"
                android:id="@+id/four_btn"
                style="@style/GeneralButtons"
                android:text="@string/four_btn" />

            <Button
                android:onClick="clickButtonEvent"
                android:id="@+id/five_btn"
                style="@style/GeneralButtons"
                android:text="@string/five_btn" />

            <Button
                android:onClick="clickButtonEvent"
                android:id="@+id/six_btn"
                style="@style/GeneralButtons"
                android:text="@string/six_btn" />

            <Button
                android:onClick="operationEvent"
                android:id="@+id/minus_btn"
                style="@style/Operation_btn"
                android:text="@string/minus_btn" />
        </TableRow>

        <TableRow
            android:onClick="clickButtonEvent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:onClick="clickButtonEvent"
                android:id="@+id/one_btn"
                style="@style/GeneralButtons"
                android:text="@string/one_btn" />

            <Button
                android:onClick="clickButtonEvent"
                android:id="@+id/two_btn"
                style="@style/GeneralButtons"
                android:text="@string/two_btn" />

            <Button
                android:onClick="clickButtonEvent"
                android:id="@+id/three_btn"
                style="@style/GeneralButtons"
                android:text="@string/three_btn" />

            <Button
                android:onClick="operationEvent"
                android:id="@+id/plus_btn"
                style="@style/Operation_btn"
                android:text="@string/plus_btn" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:onClick="clickButtonEvent"
            android:id="@+id/zero_btn"
            style="@style/Zero_btn"
            android:text="@string/zero_btn" />

        <Button
            android:onClick="clickButtonEvent"
            android:id="@+id/dot_btn"
            style="@style/GeneralButtons"
            android:text="@string/dot_btn" />

        <Button
            android:onClick="clickButtonEvent"
            android:id="@+id/equal_btn"
            style="@style/Operation_btn"
            android:text="@string/equal_btn" />
    </LinearLayout>

</LinearLayout>